[project]
name = "broadcast-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "python-socketio[asyncio-client]>=5.16.0",
    "setuptools>=80.9.0",
    "websocket>=0.2.1",
    "websocket-client>=1.9.0",
    "websockets>=16.0",
]
